@@ -43,17 +43,19 @@ Gentoo Linux installation."""
 		self.load_text.set_width_chars(40)
 		self.load_text.set_flags(gtk.CAN_FOCUS)
 		self.load_text.grab_focus()
-		entry_box.pack_start(load_label, expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
-		entry_box.pack_start(self.load_text, expand=gtk.FALSE, fill=gtk.FALSE)
-		load_button = gtk.Button("_Load Profile", use_underline=gtk.TRUE)
-		load_button.connect("clicked", self.load_profile, None)
-		entry_box.pack_start(load_button, expand=gtk.FALSE, fill=gtk.FALSE, padding=30)
-		entry_box2.pack_start(entry_box, expand=gtk.FALSE, fill=gtk.FALSE)
-		vert.pack_start(entry_box2, expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
-		vert.pack_start(self.load_status_label, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
-		container.pack_start(floppy_image, expand=gtk.FALSE, fill=gtk.FALSE, padding=40)
-		container.pack_start(content_label2, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
-		vert.pack_end(container, expand=gtk.FALSE, fill=gtk.FALSE, padding=10)
+
+#		entry_box.pack_start(load_label, expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
+#		entry_box.pack_start(self.load_text, expand=gtk.FALSE, fill=gtk.FALSE)
+#		load_button = gtk.Button("_Load Profile", use_underline=gtk.TRUE)
+#		load_button.connect("clicked", self.load_profile, None)
+#		entry_box.pack_start(load_button, expand=gtk.FALSE, fill=gtk.FALSE, padding=30)
+#		entry_box2.pack_start(entry_box, expand=gtk.FALSE, fill=gtk.FALSE)
+#		vert.pack_start(entry_box2, expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
+#		vert.pack_start(self.load_status_label, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
+#		container.pack_start(floppy_image, expand=gtk.FALSE, fill=gtk.FALSE, padding=40)
+#		container.pack_start(content_label2, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
+#		vert.pack_end(container, expand=gtk.FALSE, fill=gtk.FALSE, padding=10)
+
 		self.add_content(vert)
 
 	def activate(self):
