@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.12 2004/12/19 06:52:07 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.13 2004/12/19 07:17:11 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
-  Exit button works. Load button works. Save button works.
+  Exit button works. Load button works. Save button works. Minor fixes to
+  NetworkMounts due to switch to ComboBox for Type field.
 
   18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Added Load/Save buttons and images (don't do anything yet). Reordered
